# device-stm32

./: Inspirations.pur  README.md
.github/workflows/: tests.yml
Firmware/: .cproject  .gitignore  .mxproject  CMakeLists.txt  CMakePresets.json  Firmware.ioc  STM32L496XX_FLASH.ld  device-stm32.ioc
Firmware-STM32CubeIDE/: .cproject  .mxproject  .project  Firmware-STM32CubeIDE.ioc  Firmware-STM32CubeIDE.launch
Firmware-STM32CubeIDE/Core/Inc/: display.h  main.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
Firmware-STM32CubeIDE/Core/Src/: display.c  main.c  ssd1306_tests.c  stm32l4xx_hal_msp.c  stm32l4xx_it.c  system_stm32l4xx.c
Firmware-STM32CubeIDE/Debug/: Firmware-STM32CubeIDE.elf  Firmware-STM32CubeIDE.list  Firmware-STM32CubeIDE.map  makefile  objects.list  objects.mk  sources.mk
Firmware/Core/Inc/: audio_control.h  display.h  input.h  main.h  minimp3.h  music_player.h  stm32l4xx_hal_conf.h  stm32l4xx_it.h
Firmware/Core/Src/: audio_control.c  display.c  input.c  main.c  music_player.c  navigation.c  ssd1306_tests.c  stm32l4xx_hal_msp.c  test.c  (+2 more)
Firmware/EWARM/: Project.eww  device-stm32.ewd  device-stm32.ewp
Firmware/Tests/: CMakeLists.txt  test_audio_control.c  test_input.c
Firmware/Tests/mocks/: mock_stm32l4xx_hal.c  mock_stm32l4xx_hal.h  mock_stm32l4xx_hal_gpio.c  mock_stm32l4xx_hal_gpio.h
Firmware/build-tests/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json
Firmware/cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
PCB/stm32_player/: stm32_player.kicad_prl  stm32_player.kicad_pro  stm32_player.kicad_sch
(+81 files in other folders)
